--- a/credit-card-user-segmentation.ipynb
+++ b/credit-card-user-segmentation.ipynb
@@ -4624,50 +4624,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By examining each cluster for each features above, we can see the pattern between each clusters or **profilling the clusters** as follows :\n",
+    "By examining each cluster for each features above, we can \n",
+    "see the pattern between each clusters or **profilling the \n",
+    "clusters** as follows :\n",
     "\n",
-    "**Cluster 1:**  \n",
+    "| Feature | Cluster 1 (Conservative Users) | Cluster 2 (Revolving Credit Users) | Cluster 3 (High-Value Active Users) |\n",
+    "|---------|--------------------------------|------------------------------------|------------------------------------|\n",
+    "| Balance | Low | Moderate | High |\n",
+    "| Credit Limit | Low | Moderate | High |\n",
+    "| Balance Usage Frequency | Moderate | High | Moderate to High |\n",
+    "| Purchases | Low | Low to Moderate | High |\n",
+    "| One-off Purchases | Low | Low | High |\n",
+    "| Cash Advances | Low | High | Moderate |\n",
+    "| Purchase Frequency | Moderate | Low | High |\n",
+    "| Installment Purchases | Low to Moderate | Low | High |\n",
+    "| Tenure | Similar | Similar | Similar |\n",
+    "| Payments | Low | Moderate | High |\n",
+    "| Minimum Payments | Low | Moderate | High |\n",
+    "| Full Payment Percentage | Low | Low | High |\n",
     "\n",
-    "Lower balance and credit limit  \n",
-    "Moderate frequency of balance usage  \n",
-    "Low purchases and one-off purchases  \n",
-    "Low cash advances  \n",
-    "Moderate purchase frequency  \n",
-    "Low to moderate installment purchases  \n",
-    "Similar tenure\n",
     "\n",
-    "-Profile: This cluster likely represents lower-income or more conservative credit users. They have lower credit limits, make fewer and smaller purchases, and rarely use cash advances.\n",
+    "**Cluster 1 (Conservative Users):**\n",
+    "Lower-income or more conservative credit users. They have lower credit limits, make fewer and smaller purchases, and rarely use cash advances.\n",
     "\n",
-    "**Cluster 2:**\n",
+    "**Cluster 2 (Revolving Credit Users):**\n",
+    "Revolving credit users who frequently carry a balance and use cash advances more often, but don't make large purchases. They might be using credit cards for short-term financing or cash flow management.\n",
     "\n",
-    "Moderate balance and credit limit  \n",
-    "Highest frequency of balance usage  \n",
-    "Low to moderate purchases  \n",
-    "Highest frequency of cash advances  \n",
-    "Low purchase frequency  \n",
-    "Low installment purchases  \n",
-    "Similar tenure  \n",
-    "\n",
-    "-Profile: This cluster seems to represent revolving credit users. They frequently carry a balance, use cash advances more often, but don't make large purchases. They might be using credit cards for short-term financing or cash flow management.\n",
-    "\n",
-    "**Cluster 3:**\n",
-    "\n",
-    "Highest balance and credit limit  \n",
-    "Moderate to high frequency of balance usage  \n",
-    "Highest purchases, one-off purchases, and installment purchases  \n",
-    "Moderate cash advances  \n",
-    "Highest purchase frequency and one-off purchase frequency  \n",
-    "Highest payments and minimum payments  \n",
-    "Similar tenure \n",
-    "Highest percentage of full payments  \n",
-    "\n",
-    "-Profile: This cluster represents high-value, active credit users. They have the highest credit limits, make frequent and large purchases (both regular and installment), and have the highest payment amounts. They use their cards extensively but also tend to pay in full more often, this means that they might be reward-seekers or using credit for convenience rather than financing."
+    "**Cluster 3 (High-Value Active Users):**\n",
+    "High-value, active credit users with the highest credit limits. They make frequent and large purchases (both regular and installment) and have the highest payment amounts. They use their cards extensively but also tend to pay in full more often, suggesting they might be reward-seekers or using credit for convenience rather than financing."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
     "Therefore, from output above, I would like to call each cluster as follows :\n",
     "\n",
     "**Cluster 1: \"Conservative Users\"**\n",
